Implement tagging and better search
Users may now use the tag and untag commands to manage tags for
existing tasks. Users may search for tasks by tag using the
findtag command.

The existing find command, which searches tasks by name, has
also been updated to accept multiple keywords and be case
insensitive for consistency with findtag.